# An-Amazing-Adventure

./: .gitignore  CLAUDE.md  CLIENT_ARCHITECTURE.md  CLIENT_DATA_FLOWS.md  INFRASTRUCTURE-DEPENDENCIES.md  README.md  errors.go  game.go  go.mod  handlers.go  index.html  logger.go  main.go  maze.go  maze.js  ui-notes.md  utils.go
.github/workflows/: build-push-deploy.yml  deploy-client.yml  deploy-server.yml  pr-checks.yml
an-amazing-frontend/: index.html  package.json  pnpm-lock.yaml
an-amazing-frontend/src/: App.tsx  main.tsx
client/: .cta.json  .env.development  .env.production  .prettierrc  2  README.md  dockerfile  doppler.yaml  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx  main.tsx  models.ts  routeTree.gen.ts  styles.css
client/src/__tests__/: auth.service.test.ts  gameStore.test.ts
client/src/components/: AccountPanel.tsx  AdminPanel.tsx  Chat.tsx  CustomLink.tsx  GameInfo.tsx  Header.tsx  RoomMap.tsx  WaitForWorld.ts  WorldGenTerminal.tsx  calcPosition.ts
client/src/hooks/: useGameSocket.ts  useWorldGenSocket.ts
client/src/routes/: __root.tsx  admin.tsx  create.tsx  forgot-password.tsx  game-{$sessionUUID}.details.tsx  game-{$sessionUUID}.tsx  index.tsx  join.$code.tsx  login.tsx  profile.tsx  signup.tsx
client/src/services/: api.admin.ts  api.game.ts  api.invites.ts  api.service.ts  api.types.ts  api.users.ts  auth.service.ts
client/src/setup/: theme.ts
client/src/store/: gameStore.ts
config/: main.tf
docs/: AI Architecture.md  Cloud Layer.md  Game Engine.md  Integrating Terraform.md  Migration Plan.md  Overview.md  Phase 6 Admin Scripts.md  Phase 6 Architecture Diagram.md  Phase 6 Frontend D&D Wizard.md  Phase 6 Overview.md  Phase 6 Party Sessions.md  Phase 6 RBAC and Usage Controls.md  Phase 6 Terraform Infrastructure.md  Phase 6 rpg-toolkit Integration.md  Project Structure.md  TODO.md  UI.md
scripts/: elevate-admin.sh  list-users.sh  reset-user-tokens.sh
server/: .gitignore  README.md  area.go  character.go  dockerfile  doppler.yaml  dynamodb_actions.go  game.go  game_state.json  gemini_actions.go  go.mod  go.sum  handler_chat.go  handlers.go  handlers_chat.go  handlers_login.go  handlers_refresh.go  handlers_users.go  image_gen.go  item.go  main.go  maze.go  mcp.go  s3.go  world_gen.go
server-cpp/: .clang-format  .gitignore  CMakeLists.txt  run.sh  tests.sh  vcpkg.json
server-cpp/src/: CMakeLists.txt  main.cpp
server-cpp/src/api_server/: CMakeLists.txt
server-cpp/src/api_server/src/: handlers.cpp  listener.cpp  requests.cpp  server.cpp  server.h  server_utils.cpp  session.cpp  tests.cpp
server-cpp/src/api_server/tests/: CMakeLists.txt  routes.test.cpp  test_utils.cpp  test_utils.h
server-cpp/src/cloud_layer/: CMakeLists.txt
server-cpp/src/cloud_layer/src/: main.cpp
server-cpp/src/game_engine/: CMakeLists.txt
server-v2/: go.mod  go.sum
server/infra/: .gitignore  CLAUDE-TODO.md  CLAUDE.md  README.md
static/: index.html  maze.js
(+108 files in other folders)
